--- a/lab2/public_html/technicalReport.html
+++ b/lab2/public_html/technicalReport.html
@@ -30,20 +30,18 @@
 
   <h1>Technical Report - Sameer Naumani - 500703778</h1>
 
-  <h2>Question 1</h2>
-  <a href="htmlcode.txt">This is the Code for Main Page</a>
 
-  <h2>Question 2</h2>
-  <p>To password protect the page, I used javascript to check if the user entered the word that I had set which was <em>password</em>. If they successfully put it in the Javascript alert box they were granted access.</p>
-
-  <h2>Question 3</h2>
-  <p> I am new to HTML so most of the tags I tried were new. In particular, one of the new tags I tried was the img tag. I used this tag to put a picture of the Toronto Maple Leafs logo and resized it.</p>
-
-  <h2>Question 4</h2>
-  <p>No, my page does not look different in different browsers.</p>
-
-  <h2>Question 5</h2>
-  <p>I spent approximately 4 hours on this lab.</p>
+  <div class="container-fluid bg-4 text-center">
+      <section id="Technical-Report">
+        <h3>Technical Report</h3>
+        <p>1. My CSS element classes are h3.name and h3.title</p>
+        <p>2. My CSS Global classes are .bg-1, .bg-2, .bg-3, .dashed, .rotate </p>
+        <p>3. My HTML5 only tags are the header tag and the article tag.</p>
+        <p>4. My CSS3 only tags are the 2D rotation, background-image, the font-family css tag, the box shadow tag.</p>
+        <p>5. Same protection as lab1.</p>
+        <p>6. 3.5 hrs.</p>
+      </section>
+  </div>
 
 
   </body>
